docs/0.4/index.md
---
layout: default
---
<div class="message warning">
  <img src="/static/img/dialog-warning.png"/>

  <strong>Oi!</strong> This is documentation is for an older version
  of RoboHydra. Unless you know you're using version 0.4, please read
  the <a href="../">documentation for the latest version</a>.
</div>

Tutorials
=========

* [Basic](tutorial/) &mdash; basic usage, plugins and heads
* [Advanced](tutorial/advanced/) &mdash; request chaining (ie. the
  `next` function), test suites and summoners

Reference documentation
=======================

* [Changes](changes/) &mdash; changes from the previous version
* [Usage](usage/) &mdash; command-line arguments and calling convention
* [Configuration](configuration/) &mdash; RoboHydra configuration file format
* [Writing plugins](plugins/) &mdash; plugin format
* [RoboHydra heads](heads/) &mdash; how the different types of heads work
* [Standard plugins](plugin-stdlib/) &mdash; plugin standard library
* [Custom RoboHydra heads](custom-heads/) &mdash; how to create your own classes of heads
* [RoboHydra summoners](summoners/) &mdash; how to keep a single server for multiple users
* [API](api/) &mdash; programming API
* [REST API](rest/) &mdash; REST API
